<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="?attr/backgroundColor">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="30dp"
		android:orientation="vertical">

		<TextView
			android:text="@string/assistant_linphone_account"
			style="@style/standard_text_font"
			android:textAllCaps="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center_vertical|center_horizontal|center"
			android:layout_gravity="center"/>

		<TextView
			android:text="@string/assistant_create_account_part_1"
			style="@style/standard_small_text_font"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingTop="10dp"
			android:gravity="center"
			android:layout_gravity="center"
			android:id="@+id/message_phone_number" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:layout_marginTop="30dp"
			android:orientation="vertical">

			<LinearLayout
				android:id="@+id/phone_number_layout"
				android:visibility="gone"
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<RelativeLayout
					android:layout_marginBottom="5dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<TextView
						android:id="@+id/phone_number_label"
						android:text="@string/phone_number"
						style="@style/assistant_input_field_header_font"
						android:textAllCaps="true"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"/>

					<ImageView
						android:id="@+id/info_phone_number"
						android:src="@drawable/info"
						android:layout_alignParentRight="true"
						android:layout_width="20dp"
						android:layout_height="20dp"/>

				</RelativeLayout>

				<LinearLayout
					android:orientation="vertical"
					android:layout_marginTop="10dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<Button
						android:id="@+id/select_country"
						style="@style/button_font"
						android:text="@string/select_your_country"
						android:background="@drawable/resizable_assistant_button"
						android:textColor="@drawable/assistant_button_text_color"
						android:layout_width="match_parent"
						android:layout_height="40dp"/>

					<LinearLayout
						android:orientation="vertical"
						android:layout_marginTop="10dp"
						android:layout_width="match_parent"
						android:layout_height="wrap_content">

						<LinearLayout
							android:orientation="horizontal"
							android:layout_width="match_parent"
							android:layout_height="wrap_content">

							<EditText
								android:id="@+id/dial_code"
								android:background="@drawable/resizable_textfield"
								android:textColor="@color/black_color"
								android:inputType="phone"
								android:text="+"
								android:layout_marginRight="10dp"
								android:gravity="center"
								android:layout_width="65dp"
								android:layout_height="42dp"
								android:hint="@string/international_prefix"
								android:maxLines="1"/>

							<EditText
								android:id="@+id/phone_number"
								android:background="@drawable/resizable_textfield"
								android:textColor="@color/black_color"
								android:contentDescription="@string/content_description_phone_number_field"
								android:inputType="phone"
								android:layout_width="match_parent"
								android:layout_height="40dp"
								android:hint="@string/phone_number"
								android:maxLines="1"/>

						</LinearLayout>

					</LinearLayout>

					<TextView
						android:id="@+id/phone_number_error_2"
						android:text="@string/error"
						style="@style/assistant_input_field_error_font"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:visibility="invisible"/>

				</LinearLayout>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/username_layout"
				android:visibility="gone"
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<TextView
					android:text="@string/username"
					style="@style/assistant_input_field_header_font"
					android:textAllCaps="true"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"/>

				<EditText
					android:id="@+id/assistant_username"
					android:background="@drawable/resizable_textfield"
					android:textColor="@color/black_color"
					android:inputType="text|textNoSuggestions"
					android:contentDescription="@string/content_description_username_field"
					android:layout_width="match_parent"
					android:layout_height="40dp"
					android:hint="@string/username"
					android:maxLines="1"/>

			</LinearLayout>

			<LinearLayout
				android:id="@+id/password_layout"
				android:visibility="gone"
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<TextView
					android:text="@string/password"
					style="@style/assistant_input_field_header_font"
					android:textAllCaps="true"
					android:paddingTop="20dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"/>

				<EditText
					android:id="@+id/assistant_password"
					android:background="@drawable/resizable_textfield"
					android:textColor="@color/black_color"
					android:inputType="textPassword"
					android:layout_width="match_parent"
					android:layout_height="40dp"
					android:hint="@string/password"
					android:maxLines="1"/>

				<TextView
					android:id="@+id/forgot_password"
					android:layout_gravity="right"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:maxLines="1"/>

			</LinearLayout>

			<CheckBox
				android:id="@+id/use_username"
				android:visibility="visible"
				android:layout_marginTop="20dp"
				android:paddingLeft="5dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:button="@drawable/checkbox"
				android:textColor="?attr/primaryTextColor"
				android:text="@string/login_with_username"/>

			<Button
				android:id="@+id/assistant_apply"
				android:text="@string/assistant_login"
				android:background="@drawable/assistant_button"
				android:textColor="@drawable/assistant_button_text_color"
				style="@style/button_font"
				android:layout_width="wrap_content"
				android:layout_height="40dp"
				android:paddingLeft="10dp"
				android:paddingRight="10dp"
				android:layout_marginTop="20dp"/>

		</LinearLayout>

	</LinearLayout>

</ScrollView>