...
                android:gravity="center"
                android:padding="10dp"
                android:contentDescription="@string/assistant_create_account"
                android:text="@string/assistant_create_account" />

            <TextView
                android:id="@+id/login_linphone"
                style="@style/button_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/assistant_button"
                android:textColor="@drawable/assistant_button_text_color"
                android:gravity="center"
                android:padding="10dp"
                android:contentDescription="@string/assistant_login_linphone"
                android:text="@string/assistant_login_linphone" />

            <TextView
                android:id="@+id/login_generic"
                style="@style/button_font"
                android:layout_width="match_parent"
...
